--- a/src/components/ui/field/Field.module.scss
+++ b/src/components/ui/field/Field.module.scss
@@ -17,6 +17,10 @@
 		border-color: rgba($purple, 0.5);
 	}
 
+	&.cardholder {
+		text-transform: capitalize;
+	}
+
 	&.small {
 		max-width: 134px;
 	}
